--- a/Task-2/weather-application/index.html
+++ b/Task-2/weather-application/index.html
@@ -59,7 +59,7 @@
         </nav>
         <section id="hero">
             <div class="container">
-                <h2 style="color: antiquewhite;">Welcome</h2>
+                <h2 style="color: antiquewhite;">welcome</h2>
             </div>
         </section>
     </div>
